# plot2svg

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.helloagents/: CHANGELOG.md  INDEX.md  context.md
.helloagents/archive/: _index.md
.helloagents/modules/: _index.md  analyze.md  detect_shapes.md  detect_structure.md  export_svg.md  ocr.md  (+11 more)
docs/: architecture.md  progress.md
sandbox/: sandbox_dense_lines.py  sandbox_icon_extractor.py  sandbox_line_refinement.py  sandbox_path_tracing.py  sandbox_test.py  sandbox_text_inpainting.py  test_sandbox_dense_lines.py  test_sandbox_icon_extractor.py  test_sandbox_line_refinement.py  test_sandbox_path_tracing.py  test_sandbox_script.py
tests/: __init__.py  e2e_utils.py  test_analyze.py  test_api.py  test_app.py  test_artifact_metrics.py  test_bbox_utils.py  test_cli.py  test_color_utils.py  test_component_manifest.py  test_config.py  test_detect_shapes.py  test_detect_structure.py  test_e2e_regression.py  test_enhance.py  test_export_svg.py  test_generalization.py  test_gpu.py  test_graph_builder.py  test_icon_processor.py  test_image_io.py  test_inpaint.py  test_layout_refiner.py  test_layout_template.py  test_node_detector.py  test_ocr.py  test_panel_detection.py  test_performance.py  test_pipeline.py  test_region_vectorizer.py  test_renderers.py  test_scene_graph.py  test_segment.py  test_segmentation_backend.py  test_semantic_labeling.py  test_stroke_detector.py  test_svg_templates.py  test_template_optimizer.py  test_text_layers.py  test_vectorize_region.py  (+1 more)
(+182 files in other folders)
